--- a/pos-textuais/referencias.tex
+++ b/pos-textuais/referencias.tex
@@ -4,5 +4,5 @@
 %   e extrai automaticamente as referências citadas
 % ####################################################
 
-\bibliography{./base-referencias}
-\bibliographystyle{abntex2-alf} 
+\bibliography{base-referencias.bib}
+\bibliographystyle{abntex2-alf}
