Renomeado para Fatec ZL

--- a/pre-textuais/capa.tex
+++ b/pre-textuais/capa.tex
@@ -10,10 +10,10 @@
 % DADOS DO TRABALHO--------------------------------------------------------------------------------------
 \titulo{Título do Trabalho: Subtítulo do Trabalho}
 \titleabstract{Title in English}
-\autor{Nome Completo do Autor}
+\autor{Vinicyus Macedo}
 \autorcitacao{SOBRENOME, Nome} % Sobrenome em maiúsculo
-\local{Americana, SP}
-\data{2018}
+\local{São Paulo, SP}
+\data{2019}
 
 % NATUREZA DO TRABALHO-----------------------------------------------------------------------------------
 % Opções: 
@@ -34,19 +34,19 @@
 % ÁREA DE CONCENTRAÇÃO E LINHA DE PESQUISA---------------------------------------------------------------
 % Se a natureza for Trabalho de Conclusão de Curso, deixe ambos os campos vazios
 % Se for programa de Pós-graduação, indique a área de concentração e a linha de pesquisa
-\areaconcentracao{Desenvolvimento de Jogos}
+\areaconcentracao{}
 \linhapesquisa{}
 
 % DADOS DA INSTITUIÇÃO-----------------------------------------------------------------------------------
 % Se a natureza for Trabalho de Conclusão de Curso, coloque o nome do curso de graduação em "programa"
 % Formato para o logo da Instituição: \logoinstituicao{<escala>}{<caminho/nome do arquivo>}
-\instituicao{Faculdade de Tecnologia de Americana}
+\instituicao{Faculdade de Tecnologia da Zona Leste}
 \departamento{}
-\programa{Curso de Tecnologia em Jogos Digitais}
+\programa{Curso de Análise e Desenvolvimento de Sistemas}
 \logoinstituicao{0.2}{figuras/logo-instituicao.png} 
 
 % DADOS DOS ORIENTADORES---------------------------------------------------------------------------------
-\orientador{Prof. Dr. Kleber de Oliveira Andrade}
+\orientador{Prof. Fulano de Tal}
 %\orientador[Orientadora:]{Nome da orientadora}
 \instOrientador{}
 
